# Master-s-Thesis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Ansible/: ansible.cfg  deploy_opc_ua.retry  deploy_opc_ua.yml
Ansible/group_vars/: all.yml
Ansible/roles/opc.ua/files/: myServer.c
Ansible/roles/opc.ua/files/certificates/: ca.crt  ca.key  server_cert.der  server_key.der
Ansible/roles/opc.ua/tasks/: main.yml
Ansible/roles/swap_1024/tasks/: main.yml
Ansible_configure_data_source/: deploy_data_collection.yml  hosts
Ansible_configure_data_source/defaults/: main.yml
Ansible_configure_data_source/group_vars/: targets.yml
Chronograf/: README.md
Chronograf/documentation/static/stylesheets/: main.css
Chronograf/influxdb/data/meta/: meta.db
Chronograf/kapacitor/data/: server.id
Code/Binary_Platform/open62541/: CMakeLists.txt
Code/Binary_Platform/open62541/examples/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
Code/Binary_Platform/open62541/examples/doc/: cmake_install.cmake
Code/Binary_Platform/open62541/examples/src_generated/: ua_config.h  ua_namespace0.c  ua_nodeids.h  ua_statuscodes.c  ua_statuscodes.h  ua_transport_generated.c  ua_transport_generated.h  ua_transport_generated_encoding_binary.h  ua_transport_generated_handling.h  ua_types_generated.c  ua_types_generated.h  ua_types_generated_encoding_binary.h  ua_types_generated_handling.h
Code/Deprecated/: CPUServerGeneral.c  CPUTestingServerAddingArrayNode.c  CPUTestingServerAddingSingleVariableNode.c  DiscoveryTestingServer.c  EncryptionTestingServer_basic256sha256.c  EncyrptionTestingServer_basic128rsa15.c  NetworkingTestingServer.c  multiple_client_multiple_value_test.c  multiple_clients_single_value_test.c
Code/Deprecated/CPU_Tests/: call_per_second_test.c  filesize_test.c  sorting_test.c
Code/Deprecated/Discovery_Tests/: find_servers_test.c
Code/Deprecated/Encryption_Tests/: encryption_test_basic128rsa15.c
Code/Testing/: encryption_test_client_side.c  encryption_test_server_side.c  fullServer.c  multiple_clients_single_value_test.c  myServer.c  open62541.h  sorting_test.c
Code/Testing Platform/Clients/: commonTestingMethods.h
Code/Testing Platform/Clients/CPU_Tests/: sorting_test.c
Code/Testing Platform/Clients/Discovery_Tests/: find_servers_test.c
Code/Testing Platform/Clients/Networking_Tests/: networking_test.c
Code/Testing Platform/Server/: NetworkingServerClass.h  open62541.h
Code/Testing Platform/certificates/: ca.crt  ca_cert.der  server_cert.der
Code/Testing_Platform/: CMakeLists.txt
Code/Testing_Platform/Client/: CPU_Test_Client_Class.h  Discovery_Test_Client_Class.h  Encryption_Test_Client_Class.h  MainClient.c  Networking_Test_Client_Class.h
Code/Testing_Platform/ClientSide/: MainClient.c
Code/Testing_Platform/ClientSide/headers/: CPU_Test_Client_Class.h  Discovery_Test_Client_Class.h  Encryption_Test_Client_Class.h  Networking_Test_Client_Class.h  commonClientMethods.h  open62541.h
Code/Testing_Platform/Clients/CPU_Tests/: call_per_second_test.c  multiple_client_multiple_value_test.c  multiple_clients_single_value_test.c
Code/Testing_Platform/Clients/Encryption_Tests/: encryption_test_basic128rsa15.c  encryption_test_basic256sha256.c
Code/Testing_Platform/Clients/Multithreading_Tests/: multithreading_test.c
Code/Testing_Platform/Server/: CpuServerClass.h  DiscoveryServerClass.h  EncryptionServerClass.h  MainServer.c  commonMethods.h  custom_datatype.h
Code/Testing_Platform/ServerSide/: MainServer.c  open62541.c  open62541.h
Code/Testing_Platform/ServerSide/headers/: CpuServerClass.h  DiscoveryServerClass.h  EncryptionServerClass.h  NetworkingServerClass.h  commonServerMethods.h  open62541.h
Code/Testing_Platform/certificates/: ca.key  server_key.der
Code/Tutorials/: basicDataTypes.c  client  client.c  connectingVariablePhysical.c  helloWorld.c  method.c  objectTypes.c  open62541.h  server  server.c  variableTypes.c
Code/Tutorials/CodeLiteProject/: server.c
Code/client/: .gitignore  CMakeLists.txt  client.c  method.c  publisher.c  subscriber.c
Code/server/: myServer  myServer.c  open62541.c  open62541.h
Code/tests/: Dockerfile  method.c  open62541.c
Deployment/Ansible/: hosts
Deployment/Ansible/roles/opc.ua/files/: CPUServerGeneral.c  CPUTestingServerAddingArrayNode.c  CPUTestingServerAddingSingleVariableNode.c
Deployment/Ansible/roles/opc.ua/tasks/: main.yml
Deployment/Ansible_configure_data_source/: deploy_data_collection.retry  hosts
Deployment/Ansible_configure_data_source/defaults/: main.yml
Deployment/Chronograf/: all_dashboards.json
Deployment/Chronograf/influxdb/data/meta/: meta.db
Deployment/Chronograf/kapacitor/data/: cluster.id
Deployment/Docker/: Dockerfile
Docker/: Dockerfile  filesize_test.c  method.c  open62541.c
Documents/: DDS-compare.ppt  MicroController.xlsx
LateX/: main.tex
LateX/chapters/: 01_introduction.tex  02_stateofart.tex  03_approach.tex  04_researchmaterial.tex  05_researchmethods.tex  06_results.tex  07_conclusions.tex
LateX/pages/: abstract.tex  acknowledgements.tex  cover.tex
Results/: Adding and Deleting Array Nodes  Adding and Deleting Single Varible Nodes  beaglebone.txt  cobott2.txt  laptop.txt  raspberrypi.txt
